# TileBite

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
engine/: CMakeLists.txt  TODO.txt
engine/assets/shaders/: line.vert  sprite.frag  sprite.vert  tilemap.vert
engine/src/core/: AppConfig.hpp  EngineApp.cpp  EngineApp.hpp  EngineContext.cpp  EngineContext.hpp  EntryPoint.hpp  ResourceRegistry.hpp  Types.hpp  pch.hpp
engine/src/ecs/: Archetype.cpp  Archetype.hpp  ArchetypeIterator.hpp  ComponentStorage.cpp  ComponentStorage.hpp  ISystem.hpp  QueryResponse.hpp  Signature.cpp  Signature.hpp  SystemManager.hpp  World.cpp  World.hpp
engine/src/ecs/types/: BaseComponent.hpp  ColliderRenderSystem.hpp  CollidersUpdateSystem.hpp  EngineComponents.cpp  EngineComponents.hpp  HierarchiesUpdateSystem.hpp  ParentTransformUpdateSystem.hpp  SpriteRenderSystem.hpp  TilemapRenderSystem.hpp
engine/src/events/: Event.hpp  EventCallback.hpp  EventDispatcher.cpp  EventDispatcher.hpp  EventQueue.cpp  EventQueue.hpp
engine/src/events/types/: EntityEvents.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowCloseEvent.hpp  WindowResizeEvent.hpp
engine/src/input/: InputManager.hpp
engine/src/layers/: Layer.hpp  LayerStack.cpp  LayerStack.hpp
engine/src/layers/types/: DebugLayer.cpp  DebugLayer.hpp  GraphicsLayer.cpp  GraphicsLayer.hpp  SystemLayer.cpp  SystemLayer.hpp
engine/src/physics/: AABB.cpp  AABB.hpp  AABBTree.cpp  AABBTree.hpp  Circle.cpp  Circle.hpp  Collider.hpp  CollisionData.hpp  CollisionUtilities.cpp  CollisionUtilities.hpp  OBB.cpp  OBB.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp  Ray2D.cpp  Ray2D.hpp  TilemapColliderGroup.cpp  TilemapColliderGroup.hpp  aabb.hpp
engine/src/renderer/: DrawCommand2D.hpp  IGPUAssets.hpp  OrthographicCamera.hpp  Renderer2D.cpp  Renderer2D.hpp  SpriteQuad.hpp  TextureSlotManager.cpp  TextureSlotManager.hpp  VertexAttribute.hpp  VertexLayout.hpp
engine/src/renderer/backend/openGL/: GLEBO.cpp  GLEBO.hpp  GLGPUAssets.cpp  GLGPUAssets.hpp  GLMesh.cpp  GLMesh.hpp  GLProgram.cpp  GLProgram.hpp  GLRenderer2D.cpp  GLRenderer2D.hpp  GLResourceHub.cpp  GLResourceHub.hpp  GLShader.cpp  GLShader.hpp  GLTexture.cpp  GLTexture.hpp  GLVBO.cpp  GLVBO.hpp  GLWrapper.hpp
engine/src/renderer/camera/: CameraController.hpp  OrthographicCamera.hpp
engine/src/resources/: AssetsManager.hpp  ControlBlock.hpp  Resource.hpp  ResourceHandle.hpp  ResourceManager.hpp  SystemResourceHub.cpp  SystemResourceHub.hpp
engine/src/resources/types/: ImageResource.cpp  ImageResource.hpp  ResourceHub.cpp  ResourceHub.hpp  SystemResourceHub.cpp  SystemResourceHub.hpp  TextFileResource.cpp  TextFileResource.hpp  TilemapResource.cpp  TilemapResource.hpp
engine/src/scenes/: Scene.cpp  Scene.hpp  SceneGraph.cpp  SceneGraph.hpp  SceneManager.cpp  SceneManager.hpp
engine/src/utilities/: Assertions.hpp  Bitset.cpp  Bitset.hpp  Concepts.hpp  IDGenerator.hpp  Identifiable.hpp  Logger.hpp  NodePool.hpp  misc.hpp
engine/src/window/: KeyCodes.hpp  README.md  Window.cpp  Window.hpp
engine/src/window/backend/glfw/: GLFWKeyCodes.hpp  GlfwWindow.cpp  GlfwWindow.hpp
sandbox/: CMakeLists.txt
sandbox/src/: collisionsDemo.cpp  main.cpp  sandbox.cpp  snakeDemo.cpp  tilemapDemo.cpp  tilemapPerlinNoiseDemo.cpp
